# gb-debug

./: Cargo.toml  index.html
src/: app.rs  debugger.rs  lib.rs  main.rs
src/components/: breakpoint_manager.rs  breakpoint_selector.rs  code_view.rs  gameboy_info.rs  linear_memory_view.rs  memory_view.rs  mod.rs  run_controller.rs  screen.rs
