[package]
name = "gb-debug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.21.0"
eframe = { version = "0.21.0", default-features = false, features = ["wgpu"] }
gb-core = { git = "https://github.com/unfinishedprogram/gb-core.git", branch = "main" }
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0.152", features = ["derive"] }


[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
